--- a/ICD0007_LAB1/index.html
+++ b/ICD0007_LAB1/index.html
@@ -2,9 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Title goes here</title>
+    <title>Save the Bees - Home</title>
   </head>
   <body>
-    Page content goes here
+    <nav>
+      <a href="#" >Home</a>
+      <a href="conditions.html" >Conditions</a>
+      <a href="winners.html" >Winners</a>
+      <a href="pageFour.html" >Page 4-1</a>
+      <a href="pageFourRedo.html" >Page 4-2</a>
+      <a href="pageFive.html" >Page 5</a>
+    </nav>
+    <h1>Save the bees</h1>
+    <p>According to all known laws
+      of aviation,
+      <em>there is no way</em> a bee
+      should be able to fly.
+      Its wings are <em>too small</em> to get
+      its fat little body off the ground.
+      The bee, of course, flies anyway
+      <strong>
+        because bees don&#39;t care
+      what humans think is impossible.
+      </strong></p>
+      <img style="align-self: flex-start;" src="images/bee-movie-barry-b-benson.jpeg" alt="Endangered_Species" title="Bee" width="250px" />
+      <p>Yellow, black. Yellow, black.<br>
+        Yellow, black. Yellow, black.<br>
+        Ooh, black and yellow!<br>
+        Let&#39;s shake it up a little.<br>
+        Barry! Breakfast is ready!<br>
+        Ooming!<br>
+        Hang on a second.<br>
+        Hello?<br>
+        - Barry?<br>
+        - Adam?</p>
   </body>
 </html>
