corrected some stuff

--- a/ICD0007_LAB1/index.html
+++ b/ICD0007_LAB1/index.html
@@ -17,7 +17,7 @@
     <p>According to all known laws
       of aviation,
       <em>there is no way</em> a bee
-      should be able to fly.
+      <u>should be able to fly.</u>
       Its wings are <em>too small</em> to get
       its fat little body off the ground.
       The bee, of course, flies anyway
