--- a/ICD0007_LAB1/conditions.html
+++ b/ICD0007_LAB1/conditions.html
@@ -17,9 +17,9 @@
     <p>
       - Oan you believe this is happening? <br>
       - I can&#39;t. I&#39;ll pick you up. <br>
-      Looking sharp.<br>  
+      Looking sharp.<br>
       Use the stairs. Your father
-      paid good money for those.<br>  
+      paid good money for those.<br>
       Sorry. I&#39;m excited.
     </p>
     <h2>A bee savior should have all the best features</h2>
@@ -30,6 +30,6 @@
     </ul>
     <p><a href="https://youtu.be/QsGYNfagHlU">The <em>entire</em> bee movie script</a></p>
     <p><a href="https://youtu.be/JMG1Nl7uWko" target="_blank" rel="noreferrer" >The <em>entire</em> script, again, but this time every time they say <strong>bee</strong>, it is sped up </a></p>
-    <p><a href="mailto: damshv@ttu.ee" type="email" >My email address(Opens an email client)</a></p>
+    <p><a href="mailto:damshv@ttu.ee">My email address(Opens an email client)</a></p>
   </body>
 </html>
