--- a/ICD0007_LAB1/pageFourRedo.html
+++ b/ICD0007_LAB1/pageFourRedo.html
@@ -29,8 +29,8 @@
     because bees don&#39;t care
   what humans think is impossible.
   </strong></p>
-  <img src="img/bee-movie-barry-b-benson.jpeg" alt="Endangered_Species" title="Bee" width="250px" />
-      </div>     
+  <img style="width: 250px" src="img/bee-movie-barry-b-benson.jpeg" alt="Endangered_Species" title="Bee"/>
+      </div>
       <div style="display:inline-block; width:200px; background-color:#E2E2E2; position: absolute;">
         <h2>A bee savior should have all the best features</h2>
       <ul>
@@ -39,6 +39,6 @@
         <li>A perfect report card, all B&#39;s.</li>
       </ul>
       </div>
-    </div>  
+    </div>
   </body>
 </html>
