corrected some minor details 4-1 and 4-2

--- a/ICD0007_LAB1/pageFourRedo.html
+++ b/ICD0007_LAB1/pageFourRedo.html
@@ -16,7 +16,7 @@
           <a href="#" >Page 5</a>
         </nav>
       </div>
-      <div style="display:inline-block; width:80%;">
+      <div style="display:inline-block; width:80%; height: 100%; max-height: 400px;">
         <h1>Save the bees</h1>
 <p>According to all known laws
   of aviation,
@@ -31,7 +31,7 @@
   </strong></p>
   <img style="width: 250px" src="img/bee-movie-barry-b-benson.jpeg" alt="Endangered_Species" title="Bee"/>
       </div>
-      <div style="display:inline-block; width:200px; background-color:#E2E2E2; position: absolute;">
+      <div style="display:inline-block; width:200px; background-color:#E2E2E2; position: absolute; height: 100%; max-height: 400px;">
         <h2>A bee savior should have all the best features</h2>
       <ul>
         <li>Here&#39;s the graduate.</li>
