removed non utf-8 characters

--- a/ICD0007_LAB1/conditions.html
+++ b/ICD0007_LAB1/conditions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Save the Bees - Conditions</title>
   </head>
   <body>
@@ -15,18 +15,18 @@
     </nav>
     <h1>Conditions for applying</h1>
     <p>
-      - Oan you believe this is happening? <br>
-      - I can&#39;t. I&#39;ll pick you up. <br>
+      - Can you believe this is happening? <br>
+      - I can't. I'll pick you up. <br>
       Looking sharp.<br>
       Use the stairs. Your father
       paid good money for those.<br>
-      Sorry. I&#39;m excited.
+      Sorry. I'm excited.
     </p>
     <h2>A bee savior should have all the best features</h2>
     <ul>
-      <li>Here&#39;s the graduate.</li>
-      <li>We&#39;re very proud of you, son.</li>
-      <li>A perfect report card, all B&#39;s.</li>
+      <li>Here's the graduate.</li>
+      <li>We're very proud of you, son.</li>
+      <li>A perfect report card, all B's.</li>
     </ul>
     <p><a href="https://youtu.be/QsGYNfagHlU">The <em>entire</em> bee movie script</a></p>
     <p><a href="https://youtu.be/JMG1Nl7uWko" target="_blank" rel="noreferrer" >The <em>entire</em> script, again, but this time every time they say <strong>bee</strong>, it is sped up </a></p>
