--- a/ICD0007_LAB1/index.html
+++ b/ICD0007_LAB1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Save the Bees - Home</title>
   </head>
   <body>
@@ -22,14 +22,14 @@
       its fat little body off the ground.
       The bee, of course, flies anyway
       <strong>
-        because bees don&#39;t care
+        because bees don't care
       what humans think is impossible.
       </strong></p>
       <img style="width: 250px" src="img/bee-movie-barry-b-benson.jpeg" alt="Endangered_Species" title="Bee"/>
       <p>Yellow, black. Yellow, black.<br>
         Yellow, black. Yellow, black.<br>
         Ooh, black and yellow!<br>
-        Let&#39;s shake it up a little.<br>
+        Let's shake it up a little.<br>
         Barry! Breakfast is ready!<br>
         Ooming!<br>
         Hang on a second.<br>
