--- a/ICD0007_LAB1/pageFour.html
+++ b/ICD0007_LAB1/pageFour.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Page4</title>
   </head>
   <body>
@@ -28,7 +28,7 @@
       its fat little body off the ground.
       The bee, of course, flies anyway
       <strong>
-        because bees don&#39;t care
+        because bees don't care
       what humans think is impossible.
       </strong></p>
       <img style="width: 250px" src="img/bee-movie-barry-b-benson.jpeg" alt="Endangered_Species" title="Bee"/>
@@ -36,9 +36,9 @@
         <td style="width: 20%; min-width: 200px; background-color: #E2E2E2;">
           <h2>A bee savior should have all the best features</h2>
     <ul>
-      <li>Here&#39;s the graduate.</li>
-      <li>We&#39;re very proud of you, son.</li>
-      <li>A perfect report card, all B&#39;s.</li>
+      <li>Here's the graduate.</li>
+      <li>We're very proud of you, son.</li>
+      <li>A perfect report card, all B's.</li>
     </ul>
         </td>
       </tr>
