--- a/ICD0007_LAB1/winners.html
+++ b/ICD0007_LAB1/winners.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Save the Bees - Winners</title>
   </head>
   <body>
