--- a/ICD0007_LAB2/index.html
+++ b/ICD0007_LAB2/index.html
@@ -29,12 +29,12 @@
         <div>
             <article>
                 <h1>The wonderful test of CSS</h1>
-                <p>Lorem ipsum dolor sit amet</p>
+                <p>Lorem ipsum <span style="border-style: solid" >dolor</span> sit amet</p>
                 <h2>
                     Subsection
                 </h2>
                 <p>
-                    Lorem ipsum <span style="border-style: solid" >dolor</span> sit amet, consectetur adipiscing elit. Fusce gravida massa sed suscipit pretium. Nullam finibus faucibus felis. Proin rutrum tristique ipsum id tristique. Proin eu vulputate lectus, vel iaculis turpis. Morbi finibus vehicula lobortis. Vivamus non tempus elit. Curabitur odio elit, hendrerit sit amet leo ut, iaculis pretium orci. Suspendisse tincidunt at orci vel rutrum.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce gravida massa sed suscipit pretium. Nullam finibus faucibus felis. Proin rutrum tristique ipsum id tristique. Proin eu vulputate lectus, vel iaculis turpis. Morbi finibus vehicula lobortis. Vivamus non tempus elit. Curabitur odio elit, hendrerit sit amet leo ut, iaculis pretium orci. Suspendisse tincidunt at orci vel rutrum.
 volutpat accumsan justo, eget faucibus erat viverra quis. Pellentesque sollicitudin condimentum risus, at pharetra lorem feugiat nec. Vestibulum efficitur eleifend ante ornare eleifend. Fusce vel nisl egestas, rhoncus eros ac, rutrum lacus. Maecenas porttitor accumsan lobortis. Duis eget nibh ac purus elementum interdum facilisis at quam. Phasellus nec condimentum tortor. Quisque eu magna sed odio porttitor maximus. Maecenas urna dolor, malesuada id porttitor eu, ultricies eget felis.
                 </p>
                 <h2>
