added minor corrections

--- a/ICD0007_LAB6/static/form.html
+++ b/ICD0007_LAB6/static/form.html
@@ -1,7 +1,7 @@
 <form id="courseform" style="display:flex; flex-direction:row" action="index.php" method="POST">
   <div>
   <label for="code">Course Code(first 3 digits or I00): </label><br>
-	<input id="code" type="text" name="code" placeholder="ICD0007" maxlength="3" required >
+	<input id="code" type="text" name="code" placeholder="I00 or ICA/ICD/etc." maxlength="3" required >
   </div>
   <fieldset>
     <legend>Choose semester</legend>
