added reset button

--- a/ICD0007_LAB6/static/form.html
+++ b/ICD0007_LAB6/static/form.html
@@ -12,3 +12,6 @@
   </fieldset>
   <input type="submit" value="Search" >
 </form>
+<form method="GET">
+  <input type="submit" value="Reset" >
+</form>
