minor change - from get to post, reset btn

--- a/ICD0007_LAB6/static/form.html
+++ b/ICD0007_LAB6/static/form.html
@@ -12,6 +12,6 @@
   </fieldset>
   <input type="submit" value="Search" >
 </form>
-<form method="GET">
+<form method="POST">
   <input type="submit" value="Reset" >
 </form>
