basic registration works

--- a/ICD0007_LAB7/static/regform.html
+++ b/ICD0007_LAB7/static/regform.html
@@ -1,6 +1,6 @@
 <div id="formparent">
   <h1>Citizen Registration</h1>
-  <form id="citizenform" action="index.php" method="POST">
+  <form id="citizenform" action="register.php" method="POST">
     <div id="formfields">
       <div>
         <label for="name">Name: </label><br>
@@ -19,7 +19,7 @@
     </div>
     <input id="submit" type="submit" value="Sign Up">
   </form>
-  <form method="POST">
-    <input id="login" type="submit" value="Log In">
-  </form>
+  <a href="index.php" class="navButton">
+    <p>Or Log in</p>
+</a>
 </div>
