--- a/ICD0007_LAB7/static/loginform.html
+++ b/ICD0007_LAB7/static/loginform.html
@@ -8,7 +8,7 @@
       </div>
     <input id="submit" type="submit" value="Log In">
   </form>
-  <form method="POST" action="index.php">
-    <input id="signup" name="signup" type="submit" value="Sign Up">
-  </form>
+  <a href="register.php" class="navButton">
+      <p>Or Register</p>
+  </a>
 </div>
