login works minimally, need to add session handling now - tomorrow, that is

--- a/ICD0007_LAB7/static/loginform.html
+++ b/ICD0007_LAB7/static/loginform.html
@@ -1,5 +1,5 @@
 <div id="formparent">
-  <h1>Citizen Registration</h1>
+  <h1>Citizen Login</h1>
   <form id="citizenform" action="index.php" method="POST">
       <div>
         <label for="pin">Pin: </label><br>
