edited buttons in login and reg form, added request count functionality in cookieinfo

--- a/ICD0007_LAB7/static/regform.html
+++ b/ICD0007_LAB7/static/regform.html
@@ -18,7 +18,7 @@
     </div>
     <input id="submit" type="submit" value="Sign Up">
   </form>
-  <a href="index.php" class="navButton">
-    <p>Or Log in</p>
-</a>
+  <form id="login" action="index.php" method="GET">
+    <input type="submit" value="Or Log In">
+  </form>
 </div>
