--- a/ICD0007_LAB7/static/loginform.html
+++ b/ICD0007_LAB7/static/loginform.html
@@ -8,7 +8,7 @@
       </div>
     <input id="submit" type="submit" value="Log In">
   </form>
-  <a href="register.php" class="navButton">
-      <p>Or Register</p>
-  </a>
+  <form id="signup" action="register.php" method="GET">
+    <input type="submit" value="Or Sign Up">
+  </form>
 </div>
