--- a/ICD0007_LAB10/index.html
+++ b/ICD0007_LAB10/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="user_login" class="container">
     <h1>User login</h1>
-    <div id="form-div">
+    <div class="form-div">
       <form id="userform">
         <div>
           <label for="username">Name:</label><br>
@@ -25,7 +25,7 @@
   </div>
   <div id="shopping" class="container">
     <h1 id="shopping_header">Shopping list</h1>
-    <div id="form-div">
+    <div class="form-div">
       <form id="itemsform">
         <div class="formfields">
           <div>
@@ -45,10 +45,12 @@
       </form>
     </div>
     <div class="display">
-      <table id="shopping_list" >
-        <th>ID</th>
-        <th>Item Name</th>
-        <th>Quantity</th>
+      <table id="shopping_list">
+        <tr>
+          <th>ID</th>
+          <th>Item Name</th>
+          <th>Quantity</th>
+        </tr>
       </table>
     </div>
   </div>
